--- a/src/Animation.css
+++ b/src/Animation.css
@@ -13,7 +13,7 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .Animation-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: Animation-logo-spin infinite 20s linear;
   }
 }
 
@@ -50,8 +50,8 @@
 }
 
 .box{
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
   border-radius: 50%;
   background: #61dafb;
   position: relative;
@@ -60,10 +60,10 @@
 .box span{
   position: absolute;
   top: -100%;
-  left: -340%;
-  width: 800%;
+  left: -280%;
+  width: 600%;
   height: 80px;
-  border: 4px solid #61dafb;
+  border: 10px solid #61dafb;
   border-radius: 50%;
   animation: anim 4s infinite;
 }
@@ -91,7 +91,7 @@
 
 @keyframes anim3{
   0%,100%{transform: rotate(60deg);}
-  50%{transform: rotate(300deg);}
+  50%{transform: rotate(240deg);}
 }
 
 
